<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.iclu.bilbioapp.fragments.SearchBookActivity">


    <LinearLayout
        android:id="@+id/formLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/whiteColor"
        android:layout_below="@+id/toolbar">

        <TextView
            android:id="@+id/tv_search_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_search_title" />

        <EditText
            android:id="@+id/et_search_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_search_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_search_author" />

        <EditText
            android:id="@+id/et_search_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_search_isbn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_search_ISBN" />

        <EditText
            android:id="@+id/et_search_isbn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/formButton"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/whiteColor"
            android:gravity="center"
            android:padding="4dp"
            android:layout_below="@id/formLayout">

            <TextView
                android:id="@+id/tv_search_expand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_close" />

            <ImageView
                android:id="@+id/layout_chevron"
                android:layout_width="20dp"
                android:layout_height="18dp"
                android:src="@drawable/ic_chevron_left_grey_800_24dp" />

        </LinearLayout>
    </LinearLayout>

    <!-- TOOLBAR AND APP TITLE -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TopBarTitleTheme">

        <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_book"
            android:layout_gravity="left"
            android:theme="@style/TopBarTitleTheme" />

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/tv_do_it"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_do_it"
        android:textAlignment="center"
        android:layout_centerInParent="true"
        android:theme="@style/TextViewStyle" />

</RelativeLayout>
