<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="25dp">

    <!--GUIDELINES -->
    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <!-- LINEAR LAYOUT + TEXT VIEW LOGO -->
    <LinearLayout
        android:id="@+id/logo_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvBiblio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_bibl"
            android:theme="@style/TitleTheme" />

        <TextView
            android:id="@+id/tvBiblio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:text="@string/title_io"
            android:theme="@style/TitleTheme" />

    </LinearLayout>

    <!-- TEXT INPUT LAYOUT + EDIT TEXT -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:theme="@style/InputTextHint"
        app:layout_constraintTop_toBottomOf="@id/logo_linear_layout">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_email_address"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:theme="@style/InputEditTextTheme" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/InputTextHint"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_email_password"
            android:padding="15dp"
            android:theme="@style/InputEditTextTheme" />
    </android.support.design.widget.TextInputLayout>

    <!-- LINEAR LAYOUT + BUTTONS -->
    <LinearLayout
        android:id="@+id/linearLayoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:alpha="0.6"
            android:background="@color/whiteColor"
            android:text="@string/login_button_register"
            android:textColor="@color/colorPrimary"
            android:theme="@style/ButtonStyleFont" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/login_button_login"
            android:textColor="@color/whiteColor"
            android:theme="@style/ButtonStyleFont" />

    </LinearLayout>

    <!-- HIDDEN TEST BUTTON -->
    <Button
        android:id="@+id/btnTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0" />

</android.support.constraint.ConstraintLayout>
